2017-10-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftosrc.cc: Support also xpdf-3.04 if XPDF304 is defined.
	* pdftoepdf-newpoppler.cc, pdftosrc-newpoppler.cc: New files
	added in order to support poppler 0.59.0 or newer versions.
	POPPLER_VERSION should be defined. At present, simply overwrite
	pdftoepdf.cc and pdftosrc.cc by pdftoepdf-newpoppler.cc and
	pdftosrc-newpoppler.cc, respectively, in order to use these
	files.
	The current pdftoepdf.cc and pdftosrc.cc support
	xpdf-4.00 by default, xpdf-3.04 if XPDF304 is defined, and
	poppler 0.57.0 or older versions if POPPLER_VERSION is
	defined.

2017-10-10  Shreevatsa R <shreevatsa.public@gmail.com>

	* pdftex.web: formatting-only fixes to make weave-able.
	Posted to ntg-pdftex, 15 Aug 2017 09:49:59.

2017-09-24  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* pdftex.web: Avoid overwriting prim_* entries by primitive().

2017-09-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftosrc.cc: Fix a potential bug which I introduced on
	2017-08-13.

2017-08-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftosrc.cc: Remove a line, which I believe is not necessary,
	to avoid a crash for xpdf-4.00.

2017-04-19  Karl Berry  <karl@freefriends.org>

	* mapfile.c (read_field): new parameter buf_size,
	and check buffer for overflow, as in append_char_to_buf.
	(fm_scan_line): change read_field calls;
	set tfm_name to empty string instead of leaving NULL.
	(check_fm_entry): remove checks of tfm_name on every print;
	check for empty tfm_name rather than lack of ps_name and font file;
	check for non-empty tfm_name on slant/extend warnings.

2017-04-12  Karl Berry  <karl@freefriends.org>

	* mapfile.c (check_fm_entry): do not try to print fm->tfm_name,
	etc., in warnings if null.
	(fm_scan_line): goto bad_line if a null tfm_name,
	even if check_fm_entry returns true.

2017-04-12  Pali Roh\'ar <pali.rohar@gmail.com>

	* ptexmac.h (set_subfont, unset_subfont, is_subfont): remove
        these duplicate macros.
